Bug 233901 - Always crash when going to 'Configure KOrganizer...'
Summary: Always crash when going to 'Configure KOrganizer...'
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.4.2
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-10 01:19 UTC by Lluís Batlle
Modified: 2010-05-02 17:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lluís Batlle 2010-04-10 01:19:43 UTC
Version:            (using KDE 4.4.2)
Compiler:          gcc 4.4.3 
OS:                Linux
Installed from:    Compiled From Sources

I've compiled the kdepim package with debugfull, and I have gdb just before the segfault.

The origin of the segfault is in the code around korganizer/koprefsdialog.cpp:850
In the function KOPrefsDialogColorsAndFonts::updateResources(), there is a for loop that prepares the mResourceCombo. In my case, no item is added to the mResourceCombo.

The segfault happens after the loop, in the call to KOPrefsDialogColorsAndFonts::updateResourceColor(), where it reads:
  QString res = mResourceIdentifier[mResourceCombo->currentIndex()];

As the mResourceCombo has no elements, that ends in a segfault in a QList.

I imagine that the for loop I mentioned has to at least add one item to the mResourceCombo, but I don't know why I don't have them.

I'm seeing this problem since KDE 4.2, I think. So, for me there is no way of configuring KOrganizer.
Comment 1 Laurent Montel 2010-04-15 10:47:30 UTC
could you send me backtrace ?
Thanks.

Do you have resources ?
Comment 2 Lluís Batlle 2010-04-15 11:34:01 UTC
I don't have the backtrace at hand now; I may take it later. But I think it will not help much.

I don't have resources. How should I have them? Maybe I have something wrong in the KDE installation?

Regards,
Lluís.
Comment 3 Lluís Batlle 2010-04-16 16:11:16 UTC
Sorry, I noticed (with help) that my KDEDIRS was lacking kdepimlibs and kdepim_runtime. That solved the crash.

I leave the bug open so you can choose either to handle the no-resources situation with a msgbox, or leave the current crashing behaviour.
Comment 4 Sergio Martins 2010-05-02 17:51:22 UTC
SVN commit 1121877 by smartins:

Don't crash when there are no resources.

BUG: 233901


 M  +5 -0      koprefsdialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1121877