Don't crash when there are no resources.

BUG: 233901

svn path=/branches/KDE/4.4/kdepim/; revision=1121877